--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -118,6 +118,7 @@
                 </ul>
               </div>
             </li>
+            <li><a class="act" routerLink="/FAQ">FAQ</a></li>
             <li><a class="act" routerLink="/contact">Contact</a></li>
             <li>
               <a class="act" href="#"
