--- a/src/app/i-frame/i-frame.component.html
+++ b/src/app/i-frame/i-frame.component.html
@@ -135,7 +135,7 @@
 </div>
   </section>
 
-  <section class="contact_sec">
+  <!-- <section class="contact_sec">
     <div class="contact_row">
       <div class="contact_col">
         <h3 class="contact_header">Contact US</h3>
@@ -216,7 +216,8 @@
         </p>
       </div>
     </div>
-  </section>
+  </section> -->
+  <app-contact-com id="contact"></app-contact-com>
 
 
 <app-footer></app-footer>
