--- a/src/app/whitecasino/whitecasino.component.html
+++ b/src/app/whitecasino/whitecasino.component.html
@@ -135,7 +135,7 @@
     </div>
     </section>
     
-    <section class="play_sec">
+    <!-- <section class="play_sec">
     <div class="white_play_row">
         <div class="white_play_col">
     <img class="pay_images" src="assets/sirplay vrnl 32_payment.webp">
@@ -173,6 +173,6 @@
     
         </div>
     </div>
-    </section>
+    </section> -->
    <app-contact-component2></app-contact-component2>
 <app-footers2></app-footers2>
