--- a/src/app/sportbet/sportbet.component.css
+++ b/src/app/sportbet/sportbet.component.css
@@ -99,7 +99,7 @@ justify-content: center;
 }
 
 .sportsbetting-mainfeature-col1 img {
-  width: 89%;
+  width: 98%;
 }
 
 .sportsbetting-mainfeature-col2 {
@@ -444,7 +444,7 @@ height: 93%;
   }
 
   .sportsbetting-section1-col2 iframe {
-    width: 100%;
+    width: 100% ;
     height: 217px;
     margin-top: 20%;
   }
@@ -452,6 +452,10 @@ height: 93%;
   .sportsbetting-section1-col2 {
     justify-content: center;
     display: flex;
+  }
+  .sportsbetting-section1-col2{
+    width: 100% !important; 
+    padding: 12px;  
   }
   /* ========================================================== */
 
@@ -529,7 +533,8 @@ height: 93%;
   }
   .sportsbetting-crypto-sports-col1 img {
     margin-left: 0;
-    width: 82%;
+    width: 100% !important;
+    height: auto !important;
   }
 
   .sportsbetting-crypto-sports-col2 {
