--- a/src/app/header3/header3.component.css
+++ b/src/app/header3/header3.component.css
@@ -783,7 +783,7 @@ body {
   display: inline-block;
   text-transform: uppercase;
   text-decoration: none;
-  font-size: 1rem;
+  font-size: 16px;
   font-weight: 400;
   transition: all 0.3s;
   position: relative;
