--- a/src/app/sportbet/sportbet.component.html
+++ b/src/app/sportbet/sportbet.component.html
@@ -25,12 +25,12 @@
 
       <h3>Try our B2B Betting software </h3>
       <div class="sportsbetting-section1-col1-link">
-        <a href="https://www.rex.games/">https://www.betskyexch.com/</a>
+        <a href="https://www.rex.games/" style="font-size: 15px;">https://www.betskyexch.com/</a>
       </div>
 
       <h3>Try our B2C Betting software </h3>
       <div class="sportsbetting-section1-col1-link">
-        <a href="https://www.sirplay.bet/">https://cricbuzzer.io/</a>
+        <a href="https://www.sirplay.bet/" style="font-size: 15px;">https://cricbuzzer.io/</a>
       </div>
 
       <div class="sportsbetting-section1-button" (click)="scrollToContact()">
