--- a/src/app/casino-games/casino-games.component.css
+++ b/src/app/casino-games/casino-games.component.css
@@ -23,7 +23,13 @@ margin-top: 9%;
 
 }
 
+span{
+  font-size: 16px;
+}
 
+b{
+  font-size: 16px;
+}
 
 
 .left-text-index3{
@@ -34,6 +40,7 @@ margin-top: 9%;
     font-family: 'Raleway', sans-serif;
     line-height: 1.8;
     width: 87%;
+    font-size: 16px;
 
 }
 
