--- a/src/app/esport/esport.component.css
+++ b/src/app/esport/esport.component.css
@@ -10,7 +10,7 @@
 /* =======================sports betting css starts============================ */
 .sportsbetting-section1-main {
   display: flex;
-  font-family: "Raleway", sans-serif;
+  font-family: Poppins;
   padding-top: 78px;
 }
 
@@ -30,7 +30,7 @@
 }
 
 .sportsbetting-section1-col1 p {
-  font-size: 1.02rem;
+  font-size: 16px;
   line-height: 2.2;
   font-weight: 400;
   font-family: "Raleway", sans-serif;
@@ -99,14 +99,14 @@ justify-content: center;
   border-top-right-radius: 0.764em;
   border-bottom-right-radius: 0.764em;
   border-bottom-left-radius: 0.764em;
-  font-size: 1em;
+  font-size: 16px;
   background-color: white;
   box-shadow: none;
   padding-top: 0.75em;
   padding-right: 1.5em;
   padding-bottom: 0.75em;
   padding-left: 1.5em;
-  font-size: 0.85em;
+  font-size: 16px;
   font-style: normal;
   font-weight: 700;
   line-height: 1.2;
@@ -155,7 +155,7 @@ justify-content: center;
   font-weight: 300;
   line-height: 1.9;
   letter-spacing: 0.01em;
-  font-size: 1rem;
+  font-size: 16px;
   color: rgb(47, 47, 47);
   font-family: "Raleway", sans-serif;
 
@@ -165,7 +165,7 @@ justify-content: center;
   font-weight: 300;
   line-height: 1.9;
   letter-spacing: 0.01em;
-  font-size: 1rem;
+  font-size: 16px;
   color: rgb(47, 47, 47);
   font-family: "Raleway", sans-serif;
 
@@ -185,7 +185,7 @@ justify-content: center;
   padding-right: 1px;
   padding-bottom: 1px;
   padding-left: 1px;
-  font-size: 1em;
+  font-size: 16px;
 }
 
 .sportsbetting-benefits h3 {
@@ -216,7 +216,7 @@ justify-content: center;
   font-weight: 300;
   line-height: 1.9;
   letter-spacing: 0.01em;
-  font-size: 1rem;
+  font-size: 16px;
   color: rgb(47, 47, 47);
   margin: 0 0 1.5em;
   font-family: "Raleway", sans-serif;
@@ -316,7 +316,7 @@ justify-content: center;
   margin-top: 1em;
   margin-bottom: 1em;
   line-height: 1.8;
-  font-size: 1rem;
+  font-size: 16px;
   letter-spacing: 0em;
   font-weight: 400;
   font-family: "Raleway", sans-serif;
@@ -329,7 +329,7 @@ justify-content: center;
 }
 
 .sportsbetting-crypto-sports-col2 ul li {
-  font-size: 1rem;
+  font-size: 16px;
   line-height: 1.8;
   letter-spacing: 0em;
   font-weight: 400;
@@ -375,7 +375,7 @@ justify-content: center;
 .sportsbetting-betting-software-col1 p {
   line-height: 1.8;
   color: rgb(0, 0, 0);
-  font-size: 1rem;
+  font-size: 16px;
   letter-spacing: 0em;
   font-weight: 400;
   font-family: "Raleway", sans-serif;
@@ -414,7 +414,7 @@ justify-content: center;
 .sportsbetting-online-retail-col2 p {
   line-height: 1.9;
   color: #999999;
-  font-size: 1rem;
+  font-size: 16px;
   letter-spacing: 0em;
   font-weight: 400;
   font-family: "Raleway", sans-serif;
@@ -850,7 +850,7 @@ body {
   display: inline-block;
   text-transform: uppercase;
   text-decoration: none;
-  font-size: 1rem;
+  font-size: 16px;
   font-weight: 500;
   color: #212529;
   transition: all 0.3s;
@@ -1035,7 +1035,7 @@ Hero and Service Section Start
 
 .section-hero p,
 .section-services p {
-  font-size: 3.2rem;
+  font-size: 16px;
 }
 
 /* ===========================================
@@ -1119,7 +1119,7 @@ Responsive Codes
   .res_data {
     display: block !important;
     list-style: none;
-    font-size: 2rem;
+    font-size: 16px;
     text-align: center;
     line-height: 44px;
     color: white;
@@ -1163,7 +1163,7 @@ Responsive Codes
   list-style: none;
   color: white;
   text-align: center;
-  font-size: 2rem;
+  font-size: 16px;
 }
 
 .res_data_1 li {
@@ -1196,22 +1196,22 @@ Responsive Codes
   letter-spacing: 0.001em;
   margin-right: calc(0.001em * -1);
   text-transform: none;
-  color: rgb(87, 87, 86);
+  color: #686868;
   font-size: calc(220%);
   font-weight: 600;
-  font-family: "Raleway", sans-serif;
+  font-family:  Poppins;
 
 }
 
 .esports-betting-col1 p {
-  font-size: 1.2rem;
+  font-size: 16px;
   font-style: normal;
   line-height: 1.8;
   letter-spacing: 0em;
   text-transform: none;
-  color: rgb(47, 47, 47);
+  color: #686868;
   font-weight: 400;
-  font-family: "Raleway", sans-serif;
+  font-family:Poppins;
 
 }
 
@@ -1236,7 +1236,7 @@ Responsive Codes
   border-top-right-radius: 0.764em;
   border-bottom-right-radius: 0.764em;
   border-bottom-left-radius: 0.764em;
-  font-size: 1em;
+  font-size: 16px;
   background-color: white;
   box-shadow: none;
   padding-top: 0.75em;
@@ -1275,23 +1275,23 @@ Responsive Codes
 }
 
 .top-esports-col1 h2 {
-  font-family: "Raleway", sans-serif;
+  font-family:  Poppins;
   font-style: normal;
   line-height: 1.3;
   letter-spacing: 0.001em;
   text-transform: none;
-  color: rgb(87, 87, 86);
+  color: #686868;
   font-size: calc(185.7%);
 }
 
 .top-esports-col1 p {
-  font-size: 1.2rem;
+  font-size: 16px;
   font-style: normal;
  
-  line-height: 40px;
+  line-height: 33px;
   letter-spacing: 0em;
   text-transform: none;
-  font-family: "Raleway", sans-serif;
+  font-family: Poppins;
   padding-top: 24px;
 
 }
@@ -1348,7 +1348,7 @@ Responsive Codes
 }
 
 .easy-setup-col2 p {
-  font-size: 1.2rem;
+  font-size: 16px;
   font-style: normal;
   line-height: 1.8;
   letter-spacing: 0em;
@@ -1393,7 +1393,7 @@ Responsive Codes
 
 }
 .esports-betting-middle-row1 p {
-  font-size: 1.2rem;
+  font-size: 16px;
   font-style: normal;
   line-height: 1.8;
   letter-spacing: 0em;
@@ -1452,7 +1452,7 @@ Responsive Codes
 
 .bitcoin-esports-col2 strong {
   color: #999999;
-  font-size: 1rem;
+  font-size: 16px;
   font-style: normal;
   line-height: 1.8;
   letter-spacing: 0em;
@@ -1487,7 +1487,7 @@ Responsive Codes
   padding-right: 1px;
   padding-bottom: 1px;
   padding-left: 1px;
-  font-size: 1em;
+  font-size: 16px;
 }
 
 .esports-faq-col1 {
@@ -2304,7 +2304,7 @@ width: 97%;
   
   
   .mobile-sports-left p{
-      font-size: 1.4rem;
+      font-size: 16px;
       line-height: 1.8;
       margin: 0 0 1.5em;
       font-weight: 300;
@@ -2353,7 +2353,7 @@ width: 97%;
   
   .mobile-advantages-left p{
   margin: 0 0 1.5em;
-  font-size: 1.2rem;
+  font-size: 16px;
       line-height: 1.4;
       font-style: normal;
       font-weight: 300;
@@ -2364,7 +2364,7 @@ width: 97%;
   
   .mobile-advantages-left strong{
   font-style: normal;
-  font-size: 1.2rem;
+  font-size: 16px;
       line-height: 1.4;
       letter-spacing: 0em;
       text-transform: none;
@@ -2444,14 +2444,14 @@ width: 97%;
   border-top-right-radius: 0.764em;
   border-bottom-right-radius: 0.764em;
   border-bottom-left-radius: 0.764em;
-  font-size: 1em;
+  font-size: 16px;
   background-color: white;
   box-shadow: none;
   padding-top: 1.55em;
   padding-right: 1.5em;
   padding-bottom: 1.55em;
   padding-left: 1.5em;
-  font-size: 0.85em;
+  font-size: 16px;
   font-style: normal;
   font-weight: 700;
   line-height: 0.2;
