--- a/src/app/whitelabel/whitelabel.component.css
+++ b/src/app/whitelabel/whitelabel.component.css
@@ -116,7 +116,7 @@ h2 {
 }
 
 
-/* @media only screen and (min-device-width: 768px) and (max-device-width: 1024px){
+@media only screen and (min-width: 820px) and (min-height: 1180px){
     .containt {
         width: 818px;
     }
@@ -198,7 +198,7 @@ h2 {
         width: 100%;
         height: auto;
     }
-} */
+}
 
 /* @media screen and (max-width: 720px) and (min-height: 540px)  {
     .first-sec {
