--- a/src/app/i-frame/i-frame.component.html
+++ b/src/app/i-frame/i-frame.component.html
@@ -88,7 +88,7 @@
   <section class="types_sports_sec_iframe">
     <div class="sports_type_row">
       <div class="sports_col_1_iframe">
-        <img class="managed_images" src="assets/sirplay sportbook 1.webp" />
+        <img class="managed_images" src="assets/VRNL 2.webp" />
       </div>
     
       <div class="sports_col_iframe">
