--- a/src/styles.css
+++ b/src/styles.css
@@ -4020,12 +4020,16 @@ padding: 98px 15px 0px 15px !important;
 }
 .index2-col .index2-col-para1{
     padding: 17px 0px;
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Poppins';
+    font-size: 16px;
+    color: #686868;
 }
 
 .index2-col .index2-col-para2{
     padding: 17px 0px;
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Poppins';
+    font-size: 16px;
+    color: #686868;
 }
 
 
@@ -4042,6 +4046,10 @@ padding: 98px 15px 0px 15px !important;
 
 .index2-col ul{
     padding: 0px 21px;
+    /* padding: 17px 0px; */
+    font-family: 'Poppins';
+    font-size: 16px;
+    color: #686868;
 }
 .index2-col ul li b{
     color: rgb(0 0 0);
