--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -10,7 +10,7 @@
           Below you'll find answer to the most common question please check out
           our <strong>Facebook Whatsapp Instagram Skype .</strong> if you still
           can't find the answer you're looking for, just
-          <b routerLink="/contact">Contact us </b>
+          <b routerLink="/contact">Contact us ! </b>
         </p>
       </div>
     </div>
@@ -649,7 +649,7 @@
                           <p>
                             Yes, indeed our eSports betting platform network is based on 5 levels:
                           </p>
-                          <ol style="text-align: start; margin: 9px;">
+                          <ol style="text-align: start; margin: 9px; font-size: 16px;">
                             <li>
                                <strong>Platform administrator</strong>  - the access to the backend (it is also possible to create other accesses to the Back office with limited privileges and permissions).
                             </li>
