--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -24,7 +24,7 @@
         
       </div>
       <!-- second row -->
-      <div class="comp_row">
+      <!-- <div class="comp_row">
         <div class="comp_col">
           <a target="_blank" href="https://www.begambleaware.org/">
             <img class="comp_2"  src="https://b2c.static112233.com/assets/images/gamblingaware.png" style="width:50px; margin-left: 5px;" />
@@ -43,9 +43,9 @@
         </div>
         
         
-      </div>
+      </div> -->
 <!-- third row -->
-      <div class="comp_row">
+      <!-- <div class="comp_row">
         <div class="comp_col">
           <a target="_blank" href="https://www.taketimetothink.co.uk/">
             <img class="comp_2"   src="https://b2c.static112233.com/assets/images/taketimetothink.png" style="width:50px; margin-left: 5px;" />
@@ -64,7 +64,7 @@
         </div>
         
         
-      </div>
+      </div> --> 
 
 
 
@@ -77,15 +77,15 @@
           </a>
         </div>
 
-        <div class="comp_col_1">
+        <!--  <div class="comp_col_1">
           <a   target="_blank" href="https://www.gamblock.com/">
             <img class="comp_1"  src="https://b2c.static112233.com/assets/images/gameblock.png"
             style="width:50px; ;margin-left: 8px;"/>
           </a>
-        </div>
+        </div> -->
         
         
-      </div>
+      </div> 
 
       
 
