--- a/src/app/footers2/footers2.component.html
+++ b/src/app/footers2/footers2.component.html
@@ -2,20 +2,28 @@
     <div class="container_footer">
         <div class="footer_row">
             <div class="footer_col">
-                <img src="assets/glicertified.png.webp">
-                <p class="footer_para">Certified Platform</p>
+            <a target="_blank" href="https://www.gamblingcommission.gov.uk">
+            <img src="https://b2c.static112233.com/assets/images/gamblingcomm.png"   class="comp_1"/>
+            </a>
+                 
             </div>
             <div class="footer_col_1">
-                <img src="assets/iso-27701.png.webp">
-                <p class="footer_para">ISO 27001</p>
+                <a  target="_blank" href="https://gordonmoody.org.uk/">
+                    <img class="comp_1" src="https://b2c.static112233.com/assets/images/gordonmoody.png"  />
+                  </a>
 
             </div>
             <div class="footer_col_2">
-                <img src="assets/experience-badge.png.webp">
-                <p class="footer_para">Experience</p>
+                <a   target="_blank" href="https://www.gamcare.org.uk/get-support/talk-to-us-now/">
+                    <img class="comp_1"  src="https://b2c.static112233.com/assets/images/gamecare.png"
+                   />
+                  </a>
             </div>
             <div class="footer_col_3">
-                <img src="assets/qiss.png.webp">
+                <a   target="_blank" href="https://betblocker.org/">
+                    <img class="comp_1"  src="https://b2c.static112233.com/assets/images/betblocker.png"
+                     />
+                  </a>
 
             </div>
         </div>
