--- a/src/app/footers2/footers2.component.css
+++ b/src/app/footers2/footers2.component.css
@@ -8,17 +8,17 @@
     padding-top: 70px;
 }
 .footer_col{
-    width: 22%;
+    width: 18%;
 }
 
 .footer_col_1{
-    width: 22%;
+    width: 18%;
 }
 .footer_col_2{
-    width: 22%;
+    width: 18%;
 }
 .footer_col_3{
-    width: 10%;
+    width: 18%;
 }
 .footer_para{
     margin-top: 30px;
@@ -194,8 +194,7 @@ color: #fff;
     }
     .footer_row{
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+   justify-content: center;
     align-items: center;
     }
     .footer_para {
@@ -207,4 +206,31 @@ color: #fff;
         justify-content: center;
         gap: 2%;
     }
+    }
+    .comp_1{
+        width: 88px;
+    }
+    @media (max-width: 768px){
+        .comp_1{
+            width: 58px;
+        }
+        .footer_row{
+            flex-direction: row;
+        }
+        .footer_col{
+            margin-left: 32px;
+        }
+       .footer_col_1,.footer_col_2,.footer_col_3, .footer_col {
+            width: 23%;
+        }
+    }
+    @media (max-width: 280px){
+        .comp_1 {
+            width: 46px;
+        }
+    }
+    @media only screen and (min-width:768px) and (min-height: 1024px){
+        .footer_col {
+            margin-left: 60px;
+        }
     }
