--- a/src/app/sportbet/sportbet.component.html
+++ b/src/app/sportbet/sportbet.component.html
@@ -69,7 +69,7 @@
     </div>
 
     <div class="sportsbetting-mainfeature-col2">
-      <h2>Sports Betting software <b> Main features</b></h2>
+      <h2>Sports Betting software <b style="font-weight: 200;"> Main features</b></h2>
       <p>
         The tools we put at your disposal to manage our betting software are
         hundreds, here we list the most powerful and above all those necessary
