--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -653,12 +653,12 @@
                             <li>
                                <strong>Platform administrator</strong>  - the access to the backend (it is also possible to create other accesses to the Back office with limited privileges and permissions).
                             </li>
-                            <li>
+                            <!-- <li>
                                <strong>Reseller</strong>  - a master-agent supervising several betting shops. Earning commissions on shop’s turnover or profits.
                             </li>
                             <li>
                                <strong>Betting shop</strong>  - it represents the physical point where players can play, deposit, etc. Through this account it is possible to place bets and earn commission on turnover or profits.
-                            </li>
+                            </li> -->
                             <li> <strong>Cashier</strong>  the profile for the betting shops's employees, able to place bets without earning any commissions.</li>
                             <li>
                                <strong> Online player,</strong> register your game account online or at a shop, place bets.
@@ -887,7 +887,7 @@ But we are constantly adding new markets.
                     role="tablist"
                     class="wp-faq-schema-items ui-accordion ui-widget ui-helper-reset"
                   >
-                    <div class="accordion-item">
+                    <!-- <div class="accordion-item">
                       <h3
                         data-bs-toggle="collapse"
                         data-bs-target="#collapse_29"
@@ -960,7 +960,7 @@ But we are constantly adding new markets.
                           </p>
                         </div>
                       </div>
-                    </div>
+                    </div> -->
                     <div class="accordion-item">
                       <h3
                         data-bs-toggle="collapse"
