--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -122,3 +122,6 @@ text-decoration: none;
 }
 }
 /* =======================<foooter sec end>=======================  */
+.font-size{
+    font-size: 14px;
+}
