--- a/src/app/faq/faq.component.css
+++ b/src/app/faq/faq.component.css
@@ -404,3 +404,8 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 p{
     font-size: 16px;
 }
+@media (max-width:768px){
+  .faq_sec_pages {
+    margin-top: 54px;
+}
+}
