--- a/src/styles.css
+++ b/src/styles.css
@@ -1141,9 +1141,9 @@ line-height: 20px;
     .about_left{
         margin-left: 54px
     }
-    .comp_1{
+    /* .comp_1{
 margin-left: -11px;
-    }
+    } */
     .comp_2{
         margin-left: -36px;
         width: 125px;
