--- a/src/app/footers2/footers2.component.css
+++ b/src/app/footers2/footers2.component.css
@@ -5,7 +5,7 @@
 }
 
 .footer_sec_2{
-    padding-top: 70px;
+    padding-top: 39px;
 }
 .footer_col{
     width: 18%;
@@ -196,6 +196,8 @@ color: #fff;
     display: flex;
    justify-content: center;
     align-items: center;
+    flex-direction: column;
+    gap:48px
     }
     .footer_para {
         font-size: 10px !important;
@@ -211,26 +213,23 @@ color: #fff;
         width: 88px;
     }
     @media (max-width: 768px){
-        .comp_1{
+        /* .comp_1{
             width: 58px;
-        }
+        } */
         .footer_row{
-            flex-direction: row;
+            flex-direction: column;
+            gap:48px
         }
-        .footer_col{
+        /* .footer_col{
             margin-left: 32px;
-        }
-       .footer_col_1,.footer_col_2,.footer_col_3, .footer_col {
+        } */
+       /* .footer_col_1,.footer_col_2,.footer_col_3, .footer_col {
             width: 23%;
-        }
+        } */
     }
     @media (max-width: 280px){
         .comp_1 {
             width: 46px;
         }
     }
-    @media only screen and (min-width:768px) and (min-height: 1024px){
-        .footer_col {
-            margin-left: 60px;
-        }
-    }
+ 
