--- a/src/app/header3/header3.component.html
+++ b/src/app/header3/header3.component.html
@@ -76,7 +76,7 @@
               <li><a href="/index.html ">Vrnl</a></li>
               <li (click)="animation()" >Sports betting software</li>
               <li (click)="animation12()">White label casino</li>
-              <li (click)="animated()">Web3</li>
+              
               <li (click)="anime()">Company</li>
               <li> <a href="/contact-us.html">Contact</a>  </li>
               </div>
@@ -88,9 +88,9 @@
           <ul  class="res_data_1">
               <div class="use_list_1" id="panel_1">
               <li  (click)="animation1()"><a> <i class="fa-solid fa-arrow-left fa-bounce"></i> Back</a></li>
-              <li><a routerLink="/sports-betting-software/retail-solutions">Retail solutions</a></li>
+              <!-- <li><a routerLink="/sports-betting-software/retail-solutions">Retail solutions</a></li> -->
               <li><a routerLink="/sports-betting-software/mobile-betting-software">Mobile betting</a></li>
-              <li><a routerLink="/cashout">Cashout</a></li>
+              <!-- <li><a routerLink="/cashout">Cashout</a></li> -->
               <li> <a routerLink="/sportsbook-iframe">Sportsbook IFrame </a></li>
               <li><a routerLink="/sports-betting-software/esports-betting-software">eSports betting</a></li>
               </div>
