--- a/src/app/contact-com/contact-com.component.html
+++ b/src/app/contact-com/contact-com.component.html
@@ -71,7 +71,7 @@
           </div>
           <div class="email_input">
             <input value="" id="phone" type="tel" name="phone" required maxlength="10" [(ngModel)]="contact.phone"
-              #phone="ngModel" placeholder="00000 00000"/>
+              #phone="ngModel" placeholder=" "/>
           </div>
           <div class="email_label">
             <label for="fname"><b>Message</b></label>
