--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -84,76 +84,162 @@
              <h1 class="subpage-title-1 aos-init aos-animate" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="000"><span>About
                    Us</span></h1>
              <div class="col-lg-8 content-2 aos-init aos-animate" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="000">
-                <p style="color: #686868;">Vrnl is on a mission to equip iGaming operators of all sizes with the tools they need to operate
-                   successfully in the Indian market and globally. Our team is a rich blend of super experienced
-                   iGaming professionals – combining over a decade spent in the industry – and technical masterminds
-                   that underpin our innovative technology-driven business. </p>
+                <p style="color: #686868;">VRNL is The Biggest Platform For Providing Online sports and Casino Betting whitelable .We offer exch API along with our custom site services for India and Bangladesh with low margins and on a reliable platform, which include casino. We provide APIs for all leagues in exchanges, along with online streaming services. Enjoy betting with reliable platform.  Enjoy over 1000 slot games and table games on our site.</p>
                 <p style="color: #686868;">
 
-                   We are here to guide and support you, as a partner, right from the off. We value client
-                   relationships and wish to share success by servicing your requirements. We want to help you realise
-                   our own vision for your products. Come join our growing family today!
-                </p>
+                   
              </div>
           </div>
        </div>
 
        <div class="partner_section">
           <div class="container" style="margin-top: 5rem;">
-             <h3 class="partner-title aos-init aos-animate" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="000">Our Partners
+             <h3 class="partner-title aos-init aos-animate" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="000">Our Client
              </h3>
              <p style="color: #686868;" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="000" class="aos-init aos-animate">Vrnl is proud to have partnered with
                 the industry’s most distinctive names across games software providers and payment solutions. Share our
                 platform for success and add your name to this growing list.</p>
              <div class="partners_logo_sec partners_logo_sec_desk aos-init aos-animate" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="000">
                 <div class="partners_logo_box">
-                   <img src="/assets/partner-logo-new/netent.svg" alt="invalid" class="img-fluid partner-image">
+                   <a href="https://velkii365.com/#/home" target="_blank">
+                    <img src="/assets/partner-logo-new/velkii365.webp" alt="invalid" class="img-fluid partner-image copy">
+                   </a>
                 </div>
                 <div class="partners_logo_box">
-                   <img src="/assets/partner-logo-new/redtiger.svg" alt="invalid" class="img-fluid partner-image">
-                   <img src="/assets/partner-logo-new/qtech.svg" alt="invalid" class="img-fluid partner-image">
+                  <a href="https://exch.9xbet.vip/#/home" target="_blank">
+                    <img src="/assets/partner-logo-new/xbet9.webp" alt="invalid" class="img-fluid partner-image copy">
+                  </a>
+
+                  <a href="https://baaji365.biz/#/home" target="_blank">
+                    <img src="/assets/partner-logo-new/baaji365biz.webp" alt="invalid" class="img-fluid partner-image copy">
+                  </a>
                 </div>
                 <div class="partners_logo_box">
-                   <img src="/assets/partner-logo-new/egaming.svg" alt="invalid" class="img-fluid partner-image">
-                   <img src="/assets/partner-logo-new/play.svg" alt="invalid" class="img-fluid partner-image" style="padding: 8px 12px;">
-                   <img src="/assets/partner-logo-new/betgames.svg" alt="invalid" class="img-fluid partner-image">
+                  <a href="https://velkiex123.biz/#/home" target="_blank">
+                    <img src="/assets/partner-logo-new/velkiex123biz.webp" alt="invalid" class="img-fluid partner-image copy">
+                  </a>
+
+                  <a href="https://bdbaji365.live/#/home" target="_blank">
+                    <img src="/assets/partner-logo-new/bdbaji365.webp" alt="invalid" class="img-fluid partner-image copy" style="padding: 8px 12px;">
+                  </a>
+
+                  <a href="https://star365.live/#/home" target="_blank">
+                    <img src="/assets/partner-logo-new/star365.webp" alt="invalid" class="img-fluid partner-image copy">
+                  </a>
+
+                 
                 </div>
                 <div class="partners_logo_box">
-                   <img src="/assets/partner-logo-new/yggdrasil.svg" alt="invalid" class="img-fluid partner-image">
-                   <img src="/assets/partner-logo-new/ebet.svg" alt="invalid" class="img-fluid partner-image">
-                   <img src="/assets/partner-logo-new/relax.svg" alt="invalid" class="img-fluid partner-image">
+                  <a href="https://velkibuzzer.io/#/home" target="_blank">
+                    <img src="/assets/partner-logo-new/velkibuzzer.webp" alt="invalid" class="img-fluid partner-image copy">
+                  </a>
+
+                  <a href="https://www.betswiz.com/#/dash" target="_blank">
+                    <img src="/assets/partner-logo-new/betswiz.webp" alt="invalid" class="img-fluid partner-image copy">
+                  </a>
+
+                  <a href="https://www.skyfaire.live/#/dash" target="_blank">
+                    <img src="/assets/partner-logo-new/skyfaire.webp" alt="invalid" class="img-fluid partner-image copy">
+                  </a>
+
+                  
+
+  
                 </div>
                 <div class="partners_logo_box">
-                   <img src="/assets/partner-logo-new/skywind.svg" alt="invalid" class="img-fluid partner-image">
-                   <img src="/assets/partner-logo-new/quickspin.svg" alt="invalid" class="img-fluid partner-image">
-                   <img src="/assets/partner-logo-new/ezugi.svg" alt="invalid" class="img-fluid partner-image">
+                  <a href="https://www.betskyexch.com/#/dash" target="_blank">
+                    <img src="/assets/partner-logo-new/betskyexch.webp" alt="invalid" class="img-fluid partner-image copy">
+                  </a>
+
+                  <a href="https://www.lc247.live/#/dash"  target="_blank">
+                    <img src="/assets/partner-logo-new/lc247.webp" alt="invalid" class="img-fluid partner-image copy">
+                  </a>
+
+                  <a href="https://www.neyaludis.live/#/dash"  target="_blank">
+                    <img src="/assets/partner-logo-new/9wickets.svg" alt="invalid" class="img-fluid partner-image copy">
+                  </a>
+
+                  
+
+                  
                 </div>
                 <div class="partners_logo_box">
-                   <img src="/assets/partner-logo-new/sportradar.svg" alt="invalid" class="img-fluid partner-image">
-                   <img src="/assets/partner-logo-new/elk.svg" alt="invalid" class="img-fluid partner-image">
+                  <a href="https://www.rajbet.win/#/dash" target="_blank">
+                    <img src="/assets/partner-logo-new/rajbet.webp" alt="invalid" class="img-fluid partner-image copy">
+                  </a>
+
+                  <a href="https://www.citybett.com/#/dash" target="_blank">
+                    <img src="/assets/partner-logo-new/citybett.webp" alt="invalid" class="img-fluid partner-image copy">
+                  </a>
                 </div>
                 <div class="partners_logo_box">
-                   <img src="/assets/partner-logo-new/playsoft.svg" alt="invalid" class="img-fluid partner-image">
+                  <a href="https://www.3wickets.io/#/dash" target="_blank">
+                    <img src="/assets/partner-logo-new/wicket3.webp" alt="invalid" class="img-fluid partner-image copy">
+                  </a>
                 </div>
              </div>
 
+
+             <!-- for mobile view -->
+
              <div class="partners_logo_sec partners_logo_sec_mob aos-init aos-animate" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="000">
                 <div class="partners_logo_box">
-                   <img src="/assets/partner-logo-new/netent.svg" alt="invalid" class="img-fluid partner-image">
-                   <img src="/assets/partner-logo-new/redtiger.svg" alt="invalid" class="img-fluid partner-image">
-                   <img src="/assets/partner-logo-new/qtech.svg" alt="invalid" class="img-fluid partner-image">
-                   <img src="/assets/partner-logo-new/egaming.svg" alt="invalid" class="img-fluid partner-image">
-                   <img src="/assets/partner-logo-new/play.svg" alt="invalid" class="img-fluid partner-image">
-                   <img src="/assets/partner-logo-new/betgames.svg" alt="invalid" class="img-fluid partner-image">
-                   <img src="/assets/partner-logo-new/yggdrasil.svg" alt="invalid" class="img-fluid partner-image">
-                   <img src="/assets/partner-logo-new/ebet.svg" alt="invalid" class="img-fluid partner-image">
-                   <img src="/assets/partner-logo-new/relax.svg" alt="invalid" class="img-fluid partner-image">
-                   <img src="/assets/partner-logo-new/skywind.svg" alt="invalid" class="img-fluid partner-image">
-                   <img src="/assets/partner-logo-new/quickspin.svg" alt="invalid" class="img-fluid partner-image">
-                   <img src="/assets/partner-logo-new/ezugi.svg" alt="invalid" class="img-fluid partner-image">
-                   <img src="/assets/partner-logo-new/sportradar.svg" alt="invalid" class="img-fluid partner-image">
-                   <img src="/assets/partner-logo-new/elk.svg" alt="invalid" class="img-fluid partner-image">
-                   <img src="/assets/partner-logo-new/playsoft.svg" alt="invalid" class="img-fluid partner-image">
+                  <a class="box" href="https://velkii365.com/#/home" target="_blank">
+                    <img src="/assets/partner-logo-new/velkii365.webp" alt="invalid" class="img-fluid partner-image copy">
+                  </a>
+
+                  <a class="box" href="https://exch.9xbet.vip/#/home" target="_blank">
+                    <img src="/assets/partner-logo-new/xbet9.webp" alt="invalid" class="img-fluid partner-image copy">
+                  </a>
+
+                  <a class="box" href="https://baaji365.biz/#/home" target="_blank">
+                    <img src="/assets/partner-logo-new/baaji365biz.webp" alt="invalid" class="img-fluid partner-image copy">
+                  </a>
+
+                  <a class="box" href="https://velkiex123.biz/#/home" target="_blank">
+                    <img src="/assets/partner-logo-new/velkiex123biz.webp" alt="invalid" class="img-fluid partner-image copy">
+                  </a>
+
+                  <a class="box" href="https://bdbaji365.live/#/home" target="_blank">
+                    <img src="/assets/partner-logo-new/bdbaji365.webp" alt="invalid" class="img-fluid partner-image copy">
+                  </a>
+
+                  <a class="box" href="https://star365.live/#/home" target="_blank">
+                    <img src="/assets/partner-logo-new/star365.webp" alt="invalid" class="img-fluid partner-image copy">
+                  </a>
+
+                  <a class="box" href="https://velkibuzzer.io/#/home" target="_blank">
+                    <img src="/assets/partner-logo-new/velkibuzzer.webp" alt="invalid" class="img-fluid partner-image copy">
+                  </a>
+
+                  <a class="box" href="https://www.betswiz.com/#/dash" target="_blank">
+                    <img src="/assets/partner-logo-new/betswiz.webp" alt="invalid" class="img-fluid partner-image copy">
+                  </a>
+
+                  <a class="box" href="https://www.skyfaire.live/#/dash" target="_blank">
+                    <img src="/assets/partner-logo-new/skyfaire.webp" alt="invalid" class="img-fluid partner-image copy">
+                  </a>
+
+                  <a class="box" href="https://www.betskyexch.com/#/dash" target="_blank">
+                    <img src="/assets/partner-logo-new/betskyexch.webp" alt="invalid" class="img-fluid partner-image copy">
+                  </a>
+
+                  <a class="box" href="https://www.lc247.live/#/dash"  target="_blank">
+                    <img src="/assets/partner-logo-new/lc247.webp" alt="invalid" class="img-fluid partner-image copy">
+                  </a>
+
+                  <a class="box" href="https://www.neyaludis.live/#/dash"  target="_blank">
+                    <img src="/assets/partner-logo-new/9wickets.svg" alt="invalid" class="img-fluid partner-image copy">
+                  </a>
+
+                  <a class="box"  href="https://www.rajbet.win/#/dash" target="_blank">
+                    <img src="/assets/partner-logo-new/rajbet.webp" alt="invalid" class="img-fluid partner-image copy">
+                  </a>
+
+                  <a class="box" href="https://www.citybett.com/#/dash" target="_blank">
+                    <img src="/assets/partner-logo-new/citybett.webp" alt="invalid" class="img-fluid partner-image copy">
+                  </a>
+                  
                 </div>
              </div>
 
