--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -749,7 +749,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="accordion-item">
+                    <!-- <div class="accordion-item">
                       <h3
                         data-bs-toggle="collapse"
                         data-bs-target="#collapse_25"
@@ -773,7 +773,7 @@
                           </p>
                         </div>
                       </div>
-                    </div>
+                    </div> -->
                     <div class="accordion-item">
                       <h3
                         data-bs-toggle="collapse"
@@ -1044,7 +1044,7 @@ But we are constantly adding new markets.
                         </div>
                       </div>
                     </div>
-                    <div class="accordion-item">
+                    <!-- <div class="accordion-item">
                       <h3
                         data-bs-toggle="collapse"
                         data-bs-target="#collaps_34"
@@ -1070,7 +1070,7 @@ But we are constantly adding new markets.
                           </p>
                         </div>
                       </div>
-                    </div>
+                    </div> -->
                     <div class="accordion-item">
                       <h3
                         data-bs-toggle="collapse"
