--- a/src/app/mobile/mobile.component.css
+++ b/src/app/mobile/mobile.component.css
@@ -30,7 +30,7 @@
 }
 
 .sportsbetting-section1-col1 p {
-  font-size: 1.02rem;
+  font-size: 1.02em;
   line-height: 2.2;
   font-weight: 400;
   font-family: "Raleway", sans-serif;
@@ -155,7 +155,7 @@ justify-content: center;
   font-weight: 300;
   line-height: 1.9;
   letter-spacing: 0.01em;
-  font-size: 1rem;
+  font-size: 1em;
   color: rgb(47, 47, 47);
   font-family: "Raleway", sans-serif;
 
@@ -165,7 +165,7 @@ justify-content: center;
   font-weight: 300;
   line-height: 1.9;
   letter-spacing: 0.01em;
-  font-size: 1rem;
+  font-size: 1em;
   color: rgb(47, 47, 47);
   font-family: "Raleway", sans-serif;
 
@@ -216,7 +216,7 @@ justify-content: center;
   font-weight: 300;
   line-height: 1.9;
   letter-spacing: 0.01em;
-  font-size: 1rem;
+  font-size: 1em;
   color: rgb(47, 47, 47);
   margin: 0 0 1.5em;
   font-family: "Raleway", sans-serif;
@@ -316,7 +316,7 @@ justify-content: center;
   margin-top: 1em;
   margin-bottom: 1em;
   line-height: 1.8;
-  font-size: 1rem;
+  font-size: 1em;
   letter-spacing: 0em;
   font-weight: 400;
   font-family: "Raleway", sans-serif;
@@ -329,7 +329,7 @@ justify-content: center;
 }
 
 .sportsbetting-crypto-sports-col2 ul li {
-  font-size: 1rem;
+  font-size: 1em;
   line-height: 1.8;
   letter-spacing: 0em;
   font-weight: 400;
@@ -375,7 +375,7 @@ justify-content: center;
 .sportsbetting-betting-software-col1 p {
   line-height: 1.8;
   color: rgb(0, 0, 0);
-  font-size: 1rem;
+  font-size: 1em;
   letter-spacing: 0em;
   font-weight: 400;
   font-family: "Raleway", sans-serif;
@@ -414,7 +414,7 @@ justify-content: center;
 .sportsbetting-online-retail-col2 p {
   line-height: 1.9;
   color: #999999;
-  font-size: 1rem;
+  font-size: 1em;
   letter-spacing: 0em;
   font-weight: 400;
   font-family: "Raleway", sans-serif;
@@ -815,7 +815,7 @@ textarea {
 }
 
 html {
-  /* 1rem = 10px */
+  /* 1em = 10px */
   overflow-x: hidden;
 }
 
@@ -824,8 +824,8 @@ body {
 }
 
 .header {
-  padding: 0 4.8rem;
-  height: 5rem;
+  padding: 0 4.8em;
+  height: 5em;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -836,12 +836,12 @@ body {
 }
 
 .header .logo {
-  height: 4rem;
+  height: 4em;
 }
 
 .navbar-list {
   display: flex;
-  /* gap: 0.8rem; */
+  /* gap: 0.8em; */
   list-style: none;
 }
 
@@ -850,7 +850,7 @@ body {
   display: inline-block;
   text-transform: uppercase;
   text-decoration: none;
-  font-size: 1rem;
+  font-size: 1em;
   font-weight: 500;
   color: #212529;
   transition: all 0.3s;
@@ -868,8 +868,8 @@ body {
 }
 
 .mobile-nav-icon {
-  width: 2rem;
-  height: 2rem;
+  width: 2em;
+  height: 2em;
   color: #a0c528;
 }
 
@@ -1020,7 +1020,7 @@ Hero and Service Section Start
 ======================================= */
 .section-hero,
 .section-services {
-  padding: 9.6rem 0;
+  padding: 9.6em 0;
   background-color: #ffffff;
   height: 60vh;
 
@@ -1035,7 +1035,7 @@ Hero and Service Section Start
 
 .section-hero p,
 .section-services p {
-  font-size: 3.2rem;
+  font-size: 3.2em;
 }
 
 /* ===========================================
@@ -1119,7 +1119,7 @@ Responsive Codes
   .res_data {
     display: block !important;
     list-style: none;
-    font-size: 2rem;
+    font-size: 2em;
     text-align: center;
     line-height: 44px;
     color: white;
@@ -1142,7 +1142,7 @@ Responsive Codes
 /* Below 560px  */
 @media (max-width: 35em) {
   .header {
-    padding: 0 2.4rem;
+    padding: 0 2.4em;
   }
 
   .header .logo {
@@ -1163,7 +1163,7 @@ Responsive Codes
   list-style: none;
   color: white;
   text-align: center;
-  font-size: 2rem;
+  font-size: 2em;
 }
 
 .res_data_1 li {
@@ -1202,7 +1202,7 @@ Responsive Codes
 }
 
 .esports-betting-col1 p {
-  font-size: 1rem;
+  font-size: 1em;
   font-style: normal;
   line-height: 1.8;
   letter-spacing: 0em;
@@ -1280,7 +1280,7 @@ Responsive Codes
 }
 
 .top-esports-col1 p {
-  font-size: 1rem;
+  font-size: 1em;
   font-style: normal;
   line-height: 40px;
   letter-spacing: 0em;
@@ -1297,7 +1297,7 @@ Responsive Codes
   display: grid;
   grid-template-columns: 0fr 1fr 1fr;
   grid-template-rows: auto;
-  grid-gap: 1rem 1rem;
+  grid-gap: 1em 1em;
 
   margin-right: -5%;
 }
@@ -1339,7 +1339,7 @@ Responsive Codes
 }
 
 .easy-setup-col2 p {
-  font-size: 1rem;
+  font-size: 1em;
   font-style: normal;
   line-height: 1.8;
   letter-spacing: 0em;
@@ -1443,7 +1443,7 @@ Responsive Codes
 
 .bitcoin-esports-col2 strong {
   color: #999999;
-  font-size: 1rem;
+  font-size: 1em;
   font-style: normal;
   line-height: 1.8;
   letter-spacing: 0em;
@@ -1482,10 +1482,10 @@ Responsive Codes
 }
 
 .esports-faq-col1 {
-  margin-top: calc(2rem / 2);
-  margin-bottom: calc(2rem / 2);
-  margin-right: calc(3rem / 2);
-  margin-left: calc(16rem / 2);
+  margin-top: calc(2em / 2);
+  margin-bottom: calc(2em / 2);
+  margin-right: calc(3em / 2);
+  margin-left: calc(16em / 2);
 }
 
 .esports-faq-heading {
@@ -1552,10 +1552,10 @@ Responsive Codes
 }
 
 .esports-faq-col2 {
-  margin-top: calc(2rem / 2);
-  margin-bottom: calc(2rem / 2);
-  margin-right: calc(20rem / 2);
-  margin-left: calc(15rem / 2);
+  margin-top: calc(2em / 2);
+  margin-bottom: calc(2em / 2);
+  margin-right: calc(20em / 2);
+  margin-left: calc(15em / 2);
 }
 
 .esports-faq-heading strong {
@@ -1684,12 +1684,12 @@ width: 100%;
   }
 
   .esports-faq-col1 {
-    margin-left: calc(2rem / 2);
+    margin-left: calc(2em / 2);
   }
 
   .esports-faq-col2 {
-    margin-right: calc(4rem / 2);
-    margin-left: calc(2rem / 2);
+    margin-right: calc(4em / 2);
+    margin-left: calc(2em / 2);
   }
 
   .top-esports-col1 {
@@ -2297,7 +2297,7 @@ width: 97%;
   
   
   .mobile-sports-left p{
-      font-size: 1.4rem;
+      font-size: 1.4em;
       line-height: 1.8;
       margin: 0 0 1.5em;
       font-weight: 300;
@@ -2345,12 +2345,13 @@ width: 97%;
       text-transform: none;
       color: rgb(87,87,86);
       font-family: 'Raleway', sans-serif;
+      margin-bottom: 15px;
 
   }
   
   .mobile-advantages-left p{
   margin: 0 0 1.5em;
-  font-size: 1.2rem;
+  font-size: 1.2em;
       line-height: 1.4;
       font-style: normal;
       font-weight: 300;
@@ -2363,7 +2364,7 @@ width: 97%;
   
   .mobile-advantages-left strong{
   font-style: normal;
-  font-size: 1.2rem;
+  font-size: 1.2em;
       line-height: 1.4;
       letter-spacing: 0em;
       text-transform: none;
