--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -127,6 +127,14 @@
                     <img src="/assets/partner-logo-new/star365.webp" alt="invalid" class="img-fluid partner-image copy">
                   </a>
 
+                  <a href="https://www.agun365.win/#/dash" target="_blank">
+                    <img src="/assets/partner-logo-new/agun365.webp" alt="invalid" class="img-fluid partner-image copy">
+                  </a>
+
+                  <a href="https://www.9ex365.bet/#/dash" target="_blank">
+                    <img src="/assets/partner-logo-new/ex3659.png" alt="invalid" class="img-fluid partner-image copy">
+                  </a>
+
                  
                 </div>
                 <div class="partners_logo_box">
@@ -140,6 +148,14 @@
 
                   <a href="https://www.skyfaire.live/#/dash" target="_blank">
                     <img src="/assets/partner-logo-new/skyfaire.webp" alt="invalid" class="img-fluid partner-image copy">
+                  </a>
+
+                  <a href="https://www.betguru.win/#/dash" target="_blank">
+                    <img src="/assets/partner-logo-new/betguru.webp" alt="invalid" class="img-fluid partner-image copy">
+                  </a>
+
+                  <a href="https://www.playbdt.live/#/dash" target="_blank">
+                    <img src="/assets/partner-logo-new/playbdt.webp" alt="invalid" class="img-fluid partner-image copy">
                   </a>
 
                   
@@ -157,6 +173,14 @@
 
                   <a href="https://www.neyaludis.live/#/dash"  target="_blank">
                     <img src="/assets/partner-logo-new/9wickets.svg" alt="invalid" class="img-fluid partner-image copy">
+                  </a>
+
+                  <a href="https://www.mpk.live/#/dash" target="_blank">
+                    <img src="/assets/partner-logo-new/mpk.webp" alt="invalid" class="img-fluid partner-image copy">
+                  </a>
+
+                  <a href="https://www.betgame.live/#/dash" target="_blank">
+                    <img src="/assets/partner-logo-new/betgame.webp" alt="invalid" class="img-fluid partner-image copy">
                   </a>
 
                   
